--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div>
           <div class="full-box">
-            <label for="tel">telefone</label>
+            <label for="tel">Telefone</label>
             <input type="text" id="tel" placeholder="(00)00000-0000)" maxlength="11" required>
         </div> <!-- FINAL DA DIV CPF -->
               
